# WITOIL-for-iMagine

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.base  JenkinsConstants.groovy  Jenkinsfile  README.md  ai4-metadata.yml  deepaas.conf.sample  entrypoint.sh  metadata.json  pyproject.toml  requirements.txt  tox.ini
.sqa/: config.yml  docker-compose.yml  dockerfile
api/: __init__.py  config.py  interface.py  responses.py  schemas.py  utils.py
bandit/: index.html
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-witoil_for_imagine_start.ipynb
tests/: README.md  conftest.py
tests/data/: .gitkeep
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py  test_requirements.py
tests/test_training/: conftest.py  test_requirements.py
witoil_for_imagine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
